--- a/css/层叠上下文.md
+++ b/css/层叠上下文.md
@@ -6,7 +6,7 @@ title: 层叠上下文
 
 ## 层叠顺序
 层叠顺序就是层叠上下文 *内部元素* 占用 z 轴空间时的优先级顺序，它是一套排序的规则。
-![stacking order](/images/stacking-order.png)
+![stacking order](images/stacking-order.png)
 这张图是从[张大神的博客](http://www.zhangxinxu.com/wordpress/2016/01/understand-css-stacking-context-order-z-index/)中偷来的。
 
 **注意：**
